--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  file_picker: ^8.0.0+1
+  sidebarx: ^0.17.1
 
 dev_dependencies:
   flutter_test:
